# antares-performance-tests

./: README.md  pyproject.toml
reports/dataframe_saving_benchmark/: .gitignore  benchmark.ini  dataframe_saving_benchmark.md  logging.ini
src/antares_performance_tests/: __main__.py  dataframe_saving_benchmark.py  get_studies_benchmark.py
src/antares_performance_tests/cli/: __init__.py
